# healthmes-agent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.healthmes  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  metric-proposal.yml  skill-proposal.yml
.github/workflows/: android-apps.yml  apple-apps.yml  ci.yml  windows-apps.yml
alembic/: env.py
alembic/versions/: 2026_07_09_1820-65812fe515fa_initial_domain_schema.py  2026_07_16_1200-c4f8a2d91b3e_raw_ingest_event.py
apps/android-usage/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
apps/ios-companion/: README.md  project.yml
apps/macos-companion/: .gitignore  README.md  project.yml
apps/windows-companion/: .gitignore  DEFERRED.md  Directory.Build.props  HealthMes.Companion.sln  README.md
config/: hermes-config.yaml.tmpl  open-wearables.env.example
docs/: BACKUP.md  DEVELOPMENT.md  EXPERT-ONBOARDING.ko.md  EXTENDING.md  PLAN.md
docs/design/: WATCH-NOTIFICATIONS.ko.md
docs/templates/: SKILL.md
healthmes/: __init__.py  __main__.py  app.py  apple_import.py  config.py  ingest.py  pairing.py
healthmes/api/: __init__.py  alerts.py  app_usage.py  auth.py  briefing.py  common.py  connect.py  decision_html.py  decisions.py  energy.py  errors.py  food.py  goals.py  ingest.py  insight_focus.py  insight_templates.py  insights.py  media.py  medical.py  pagination.py  reports.py  schedule.py  tasks.py
healthmes/backup/: __init__.py  local.py  provider.py  remote_vault.py  snapshot.py
healthmes/calendars/: __init__.py  base.py  caldav_icloud.py  creds.py  google.py  jobs.py  state.py  sync.py
healthmes/engine/: __init__.py  cognitive_energy.py  rules.py  scheduler.py  triggers.py  webhook.py
healthmes/mcp_server/: __init__.py  impact.py  interpret.py  ow_client.py  server.py  timeline.py
healthmes/store/: __init__.py  base.py  enums.py  models.py  session.py
scripts/: bootstrap.py  demo_seed.py  dev_mac.sh  healthmes_briefing_snapshot.py  vendor_sync_check.sh
scripts/initdb/: 01-create-healthmes-db.sh
skills/doctor-visit-summary/: SKILL.md
skills/healthmes-capture/: SKILL.md
skills/healthmes-planner/: SKILL.md
skills/healthmes-sleep/: SKILL.md
skills/healthmes-stress/: SKILL.md
tests/: conftest.py  test_app.py  test_apple_import.py  test_config.py  test_pairing.py
tests/api/: conftest.py  test_alerts.py  (+21 more)
(+273 files in other folders)
